<resources>
    <string name="app_name">#TO_BE_ANDROID…DEV</string>

    <!-- Lesson 1 -->
    <string name="plus_one">+1</string>
    <string name="minus_one">-1</string>

    <!-- Lesson 3 -->
    <string name="load_with_async_task">Load with Async Task</string>
    <string name="load_with_retrofit_callback">Load with Retrofit Callback</string>

    <!-- Lesson 4 -->
    <string name="load_with_rxjava">Load with RxJava</string>

    <!-- Lesson 5 -->
    <string name="i_m_static_fragment">I\'m static fragment</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="page_1">Page 1</string>
    <string name="page_2">Page 2</string>
    <string name="page_3">Page 3</string>
    <string name="add_fragment">Add fragment</string>
    <string name="replace_fragment">Replace fragment</string>
    <string name="remove_fragment">Remove fragment</string>
    <string name="add_to_back_stack">Add to back stack</string>

    <!-- Lesson 6 -->
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="add_user_to_db">Add user to DB</string>
    <string name="read_db">Read DB</string>
    <string name="read_db_with_filter">Read database with filter</string>

    <!-- Lesson 7 -->
    <string name="refresh">Refresh</string>
    <string name="temp_celsius_pattern">%.2f °C</string>

    <!-- MainActivity -->
    <string name="lesson_1_counter">Lesson_1. Counter</string>
    <string name="lesson_2_color_chooser">Lesson_2. Color Chooser</string>
    <string name="lesson_2_recyclerview">Lesson_2. RecyclerView</string>
    <string name="lesson_3_day_forecast">Lesson_3. Day Forecast</string>
    <string name="lesson_4_rx_day_forecast">Lesson_4. Rx Day Forecast</string>
    <string name="lesson_5_static_fragments">Lesson_5. Static Fragments</string>
    <string name="lesson_5_dynamic_fragments">Lesson_5. Dynamic Fragments</string>
    <string name="lesson_6_sqlite">Lesson_6. SQLite</string>
    <string name="lesson_6_room">Lesson_6. Room</string>
    <string name="lesson_7_mvp_forecast">Lesson_7. MVP Forecast</string>
    <string name="lesson_8_data_binding">Lesson_8. Data Binding</string>
    <string name="lesson_9_mvvm_forecast">Lesson_9. MVVM Forecast</string>

</resources>
