<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:orientation="vertical">

        <Button
            android:id="@+id/add_fragment_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_fragment" />

        <Button
            android:id="@+id/replace_fragment_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/replace_fragment" />

        <Button
            android:id="@+id/remove_fragment_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove_fragment" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/add_to_back_stack_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_to_back_stack" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6" />

</LinearLayout>