<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <Space
                    android:layout_width="8dp"
                    android:layout_height="0dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/age_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/age"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <Button
                android:id="@+id/add_user_to_db_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_user_to_db" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="16dp" />

            <Button
                android:id="@+id/read_db_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/read_db" />

            <Button
                android:id="@+id/read_db_with_filter_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/read_db_with_filter" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/db_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>